--- a/more-tools/src/app/globals.css
+++ b/more-tools/src/app/globals.css
@@ -8,10 +8,11 @@ body {
   
   background: #161616;
   
+  
 }
 
 .bg-dark{
-  background:#161616;
+  background:#171717;
 }
 
 .bottons-color{
@@ -83,6 +84,14 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
   gap: 8px;
 
+}
+
+.border-main{
+  border-right: 0.01px solid #4040404d;
+}
+
+.border-header{
+  border-bottom: 0.01px solid #4040404d ;
 }
 
 
