--- a/more-tools/src/app/pages/palett/palett.css
+++ b/more-tools/src/app/pages/palett/palett.css
@@ -1,16 +1,12 @@
 
 .colors-box {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 5px;
     
-    
+
 
 }
 .single-card {
-    width: 170px;
-    height: 500px;
+    width:100%;
+    height: 130px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -18,10 +14,13 @@
     justify-content: center;
     position: relative;
     transition: .3s;
+   
 }
+
+
 .single-card .content{
     text-align: center;
-
+    padding: 7px 30px;
     border-radius: 10px;
     display: none;
 }
@@ -36,13 +35,8 @@
     
 }
 .single-card:hover .content {
-    height:40px;
-    width: 150px;
-    justify-content: center;
-    align-items: center;
-    background-color: aliceblue;
-    display: flex;
-    
+    background: #d6d6dc9c;
+    display: block;
     
    
 
@@ -84,7 +78,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    
 }
 
 .error {
